Refactor : RequestValidator 구조 변경